@@ -156,7 +156,7 @@ public class Config
     public boolean native_transport_flush_in_batches_legacy = true;
     public volatile long native_transport_max_concurrent_requests_in_bytes_per_ip = -1L;
     public volatile long native_transport_max_concurrent_requests_in_bytes = -1L;
-    public Integer native_transport_max_protocol_version = Integer.MIN_VALUE;
+    public Integer native_transport_max_negotiable_version = Integer.MIN_VALUE;
 
     @Deprecated
     public Integer thrift_max_message_length_in_mb = 16;
